--- a/test.lang
+++ b/test.lang
@@ -1,3 +1,15 @@
+x = 1;
+
+if (x) {
+    print("x is true");
+} else {
+    print("x is false");
+}
+
+if (x) {
+    print(x);
+}
+
 func main() {
     x = 5;
     print(x);
