--- a/test.lang
+++ b/test.lang
@@ -1,12 +1,11 @@
 int x;
 x = 7;
 
-while (x) {
-    if (x == 5) {
+while (x >= 0) {
+    if (x != 5 && x != 0) {
         print("jetzt");
     } else {
-        print(!x);
+        print(!x, -x, x);
     }
     x = x-1;
 }
-print(x);
